# ChangeLog for dev-libs/papi
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/papi/ChangeLog,v 1.2 2014/11/28 20:26:33 slis Exp $

  28 Nov 2014; Sławek Lis <slis@gentoo.org> papi-5.3.0.ebuild:
  Fixed bug 531024

*papi-5.3.0 (31 Jul 2014)

  31 Jul 2014; Sławek Lis <slis@gentoo.org> +metadata.xml, +papi-5.3.0.ebuild:
  Added papi package