@@ -2,17 +2,19 @@
 Hash: SHA256
 
 DIST papi-5.3.0.tar.gz 3928589 SHA256 99f2f36398b370e75d100b4a189d5bc0ac4f5dd66df44d441f88fd32e1421524 SHA512 a88d28d895a1b44b0d05ac90c39406b7e9806a1d865b39df405e55b27d7f6bb191330ed7df52d4f3f04f46ff94ce867e6c1bdd9b38c314652cff1ee9d838b226 WHIRLPOOL cf1074f259831283292b57b636b6b0083a11ec6084bce2361eabe3ca706fd3d2420d3ab4074c8024296b06d11223a1dcc9782040ab08502481498b84bb2517e6
+DIST papi-5.4.0.tar.gz 4075657 SHA256 537bc209ad05050399d5f268ba8f40e499f457cab9b3503f57600f9893819195 SHA512 be4a929208a83765f99f2f34e98d6770bf46d4f336e492506cc86d6a34fbf84754b05cfd22db0949b382bb8f24ad0ed7f5e7c90941baad2593b82827ee27eb4a WHIRLPOOL 291d087c23b30a5f9f696771b62204ebe030ab731c35b9613a7821d110b920fcef777b0cfbbd136fe3838acf14631527055e0cf0c99624dfbbcd7c40cc4f4d99
 EBUILD papi-5.3.0.ebuild 876 SHA256 2a5d18c07eedef8eee53e52c0647877c53c53009eea975aefd493124b4668099 SHA512 cb06bb420b6d8cef8913be2f54cc2dd124c96e59c8d5061489020a4a635fad33df56c6808e36d49663186b2b67e1a058abfa4ebdec07596c62733c0cacc1bafb WHIRLPOOL 4eb64b15f8b039fd8704e5e7d620c438bd7718ebf42ad70e61d310b92e4947910f073088396fee17f2288157fc277dc15a6d5db07bad67962858f4ac1c13a680
-MISC ChangeLog 409 SHA256 3ecd2d13ac0ca7c8edf754a2fb431729abf353c54183767b0bde9cc9676122dc SHA512 11aa916b165ccc37d6a053a679e3c696435595e3574199e91c6b6cca709e6bb953e79015dc10b43db245f2bed802f14b20288ed7e97df0aab27c9e2048aa5634 WHIRLPOOL 4587117b70e57fceabaca7bd25bc6a7bffc711d49b58d8b84ae5f9da0a8bc0dc165fa31917153b4bd2781b4a9266bdbe18e47ecd72906b14142ec986a5779171
+EBUILD papi-5.4.0.ebuild 876 SHA256 1bb21b0bfd9475d0ffc5622d7aeba00c0d8405248e4b84744fde63cad8facc23 SHA512 4e70bb7c25cf2fc2d8c12a3186bf6f3e5fa7966e7f7a60666ddd8ccd8fcd53d39b818d1d45902a085b9555a8258ff7986ca06de96ecee501a101b03b89deee59 WHIRLPOOL dcbc4431e60e9c2b234755dba7c97c979284cc72af985e606524cb08a8315e8dd56cd1e737a4c0520d4ea9259bcb9aa9adb2a21e4141a8ab117d7007365686fa
+MISC ChangeLog 517 SHA256 670bdfbfaf4ee8099c206e7cf7118e68fcae02bcf823bb2199d1d2e348405335 SHA512 1a78c98c9b25bef1ee9285af150d06e16ca0163927c4176fc25723effcb7b48e3588d0a423b5d9b382c289e77b8b4740a8ae242bda2ce9cc6610ea66958d454c WHIRLPOOL 9b099e3c7b1a629292bc7dc39b6a258713c95a9aa145e73e4b551126414201645f491b8fd516a5061e1c33b6cd7976d08f3ea7595baef588767dd3fe8e669596
 MISC metadata.xml 205 SHA256 132e3db1188fcdf8aa6467bde8677e24fc63015666de6104a656a5b074932454 SHA512 e53c51c47b6f2ba5302d5fe6ee9524fe49c69d2b03d66aa0a3054185c7c0a83dedeec75ea15424afe22f1423d72c5bbc1c1e07c6bdbdd1912d8eb8e046a4ef58 WHIRLPOOL 5f4c6dfd2f9dae15971877f2eb53c1d9f6196a42dc62b2d95ffd2060f119d7e0794541b3d8ca565f9ca48479325d19864f74a85289c83d5a5e2396f9144d161c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUeNoGAAoJEO1RxJ84ipLkkDsIAI4qwknDZLAkYmSIme3ffe/a
-/HaCu4mP1CEUerLb5WYxxdGyBMI8AvNnYuS0cejqO3n7oskSroc/a6r2OceJkkHt
-GbIUr9gAf4VEq1wJL1dLu0AvQcvfFHrSQh2WS9KpACQq10oj5OWC2lmknGHevi+y
-8+sVSnAGbDnOCG1yiNoA+nHoARCuOobXfadoXc8qioHzpQ6E2hLHEdeEi8Cvt6xl
-15viZD1p+tvfL363I01akWzb9oE0sm1NIKr88iHTHEW7mUHE8akEY5pmq8NO8ILZ
-h12xTlnXfrS5OVMqAA2IYMuBh6sGqaA7eBdii5LJf+zXWa7v6rRBBsrl045z2uU=
-=8spg
+iQEcBAEBCAAGBQJUzyDMAAoJEO1RxJ84ipLkFxcH/jpeUKzicTUVgSsACFSmilrt
+yAzMezylJwRC0CwwWL9JJsPidiDp8YfalBAK2yZNaZghF21YE3DW2W5xU642LG7g
+x1gZ9RkoL/DmFInBY3tZpD36JBrU0bhA1JTU+aGyb7ZvPSfGn5kZmO/JDRt3OvNJ
+68OP7a/I1Zbv+YzBTLaq33XYCS5TME8fDDLVGAyettTmINQOhUm3MgQzBiAcVqwN
+jbJVkjGpwgtMFk+jJCvQsaed413KYpo4DymPEdWa8V4Iq+r8Yt4jW7Tx3nJtjCl1
+F9PdE4+g6QbnLZ7VfXkrdrgH6eM6K5e2Kmhhpb2BGV3MADOPjfrRnhnBtu+E3x8=
+=XV/4
 -----END PGP SIGNATURE-----
