@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare setup test
+DEPEND=dev-libs/libpfm[static-libs] virtual/mpi virtual/fortran
+DESCRIPTION=Performance Application Programming Interface
+EAPI=5
+HOMEPAGE=http://icl.cs.utk.edu/papi/
+IUSE=static-libs
+KEYWORDS=~amd64 ~x86
+LICENSE=BSD
+RDEPEND=dev-libs/libpfm[static-libs] virtual/mpi virtual/fortran
+SLOT=0
+SRC_URI=http://icl.cs.utk.edu/projects/papi/downloads/papi-5.4.0.tar.gz
+_eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	autotools-utils	3727db64c7b960903d5033280f108080	eutils	998e5931fb95b10a6a11ec796ada2759	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=5d119927de15b107eca654703ae44bbe
