@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/papi
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/papi/ChangeLog,v 1.2 2014/11/28 20:26:33 slis Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/papi/ChangeLog,v 1.3 2015/02/02 07:04:32 slis Exp $
+
+*papi-5.4.0 (02 Feb 2015)
+
+  02 Feb 2015; Sławek Lis <slis@gentoo.org> +papi-5.4.0.ebuild:
+  version bump
 
   28 Nov 2014; Sławek Lis <slis@gentoo.org> papi-5.3.0.ebuild:
   Fixed bug 531024
